--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
 
 	<!-- modules -->
 	<script src="perspective.js"></script>      
+	<script src="canvas.js"></script>      
 	<script src="diagrams.js"></script>      
 	<script src="colours.js"></script>      
 	<script src="drawing.js"></script>	
