--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
 	<script src="points.js"></script>      
 	<script src="shapes.js"></script>	
 	<script src="primitives.js"></script>	
+	<script src="cubePoints.js"></script>
 	<script src="solids.js"></script>
 	<script src="fakeSpheres.js"></script>	
 	<script src="transformation.js"></script>	
