improved cube geometry

--- a/testCubeTransformations.html
+++ b/testCubeTransformations.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
 	<title>Test For DiagramAppJs library</title>
-	<link rel="icon" href="../swallow.gif">	
+	<link rel="icon" href="swallow.gif">	
 
 	<!-- modules -->
 	<script src="points.js"></script>      
