started unit tests for lookup rotation transformations

--- a/testKeyboardDrivenTransformations.html
+++ b/testKeyboardDrivenTransformations.html
@@ -3,7 +3,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1">
 	<title>Test For DiagramAppJs library</title>
-	<link rel="icon" href="swallow.gif">	
+	<link rel="icon" href="swallow.gif">
+	<link rel="stylesheet" href="test.css">
+		
 
 	<!-- modules -->
 	<script src="points.js"></script>      
@@ -16,7 +18,7 @@
 	<script src="shapes.js"></script>	
 	<script src="cubePoints.js"></script>      
 	<script src="solids.js"></script>	
-	<script src="transformation.js"></script>	
+	<script src="transformation2.js"></script>	
 	<script src="stage.js"></script>
 	
 	
@@ -24,6 +26,7 @@
 	<script src="testKeyboardDrivenTransformationsApp.js"></script>
 </head>
 <body>
+	<div id="test_results"></div>
 	<canvas id="canvas"></canvas>
 	
 	<script>
