--- a/testKeyboardDrivenTransformations.html
+++ b/testKeyboardDrivenTransformations.html
@@ -8,6 +8,7 @@
 		
 
 	<!-- modules -->
+	<script src="test.js"></script>      
 	<script src="points.js"></script>      
 	<script src="canvas.js"></script>
 	<script src="perspective.js"></script>
