--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 	<script src="diagrams.js"></script>      
 	<script src="colours.js"></script>      
 	<script src="drawing.js"></script>	
+	<script src="vectorDrawing.js"></script>	
 	<script src="points.js"></script>      
 	<script src="shapes.js"></script>	
 	<script src="primitives.js"></script>	
