--- a/tests/testDiagramApp.html
+++ b/tests/testDiagramApp.html
@@ -1,42 +1,45 @@
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="initial-scale=1">
-	<title>Test For DiagramAppJs library</title>
-	<link rel="icon" href="../swallow.gif">	
-	<link rel="stylesheet" href="../../styles/test.css">
 
-	<!-- modules -->
-	<script src="../perspective.js"></script>      
-	<script src="../canvas.js"></script>      
-	<script src="../diagrams.js"></script>      
-	<script src="../colours.js"></script>      
-	<script src="../drawing.js"></script>	
-	<script src="../vectorDrawing.js"></script>	
-	<script src="../points.js"></script>      
-	<script src="../shapes.js"></script>	
-	<script src="../primitives.js"></script>	
-	<script src="../solids.js"></script>
-	<script src="../fakeSpheres.js"></script>	
-	<script src="../transformation.js"></script>	
-	<script src="../stage.js"></script>
-	
-	<script src="test.js"></script>      
-	<!-- app -->
-	<script src="testColours.js"></script>
-	<script src="testDiagramApp.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1">
+    <title>Test For DiagramAppJs library</title>
+    <link rel="icon" href="../../swallow.gif">
+    <link rel="stylesheet" href="test.css">
+
+    <!-- modules -->
+    <script src="../perspective.js"></script>
+    <script src="../canvas.js"></script>
+    <script src="../diagrams.js"></script>
+    <script src="../colours.js"></script>
+    <script src="../drawing.js"></script>
+    <script src="../vectorDrawing.js"></script>
+    <script src="../points.js"></script>
+    <script src="../shapes.js"></script>
+    <script src="../primitives.js"></script>
+    <script src="../solids.js"></script>
+    <script src="../fakeSpheres.js"></script>
+    <script src="../transformation.js"></script>
+    <script src="../stage.js"></script>
+
+    <script src="test.js"></script>
+    <!-- app -->
+    <script src="testColours.js"></script>
+    <script src="testDiagramApp.js"></script>
 
 </head>
-<body>
-	<canvas id="canvas"></canvas>
-	<div id="colour_results"></div>
-	
-	<script>
-		window.onload = function () {
 
-			window.DIAGRAM_APP.run();			
-			window.DIAGRAM_APP.runColourTests();			
-		};
- 	</script>
+<body>
+    <canvas id="canvas"></canvas>
+    <div id="colour_results"></div>
+
+    <script>
+        window.onload = function() {
+
+            window.DIAGRAM_APP.run();
+            window.DIAGRAM_APP.runColourTests();
+        };
+    </script>
 </body>
+
 </html>
