--- a/tests/testDiagramApp.html
+++ b/tests/testDiagramApp.html
@@ -10,17 +10,15 @@
     <!-- modules -->
     <script src="../perspective.js"></script>
     <script src="../canvas.js"></script>
-    <script src="../diagrams.js"></script>
     <script src="../colours.js"></script>
-    <script src="../drawing.js"></script>
-    <script src="../vectorDrawing.js"></script>
+    <script src="../draw.js"></script>
     <script src="../points.js"></script>
-    <script src="../shapes.js"></script>
     <script src="../primitives.js"></script>
-    <script src="../solids.js"></script>
+    <script src="../hexahedron.js"></script>
     <script src="../fakeSpheres.js"></script>
     <script src="../transformation.js"></script>
     <script src="../stage.js"></script>
+    <script src="../ui.js"></script>
 
     <script src="test.js"></script>
     <!-- app -->
