--- a/tests/testKeyboardDrivenTransformations.html
+++ b/tests/testKeyboardDrivenTransformations.html
@@ -12,14 +12,14 @@
     <script src="../points.js"></script>
     <script src="../canvas.js"></script>
     <script src="../perspective.js"></script>
-    <script src="../diagrams.js"></script>
     <script src="../colours.js"></script>
-    <script src="../drawing.js"></script>
+    <script src="../draw.js"></script>
     <script src="../primitives.js"></script>
-    <script src="../shapes.js"></script>
-    <script src="../solids.js"></script>
+    <script src="../hexahedron.js"></script>
+    <script src="../transformation.js"></script>
     <script src="../transformation2.js"></script>
     <script src="../stage.js"></script>
+    <script src="../ui.js"></script>
 
     <script src="test.js"></script>
     <!-- app -->
