Extracted transformers from transformations.

--- a/tests/testAtmosphericPerspective.html
+++ b/tests/testAtmosphericPerspective.html
@@ -17,6 +17,7 @@
     <script src="../primitives.js"></script>
     <script src="../transformation.js"></script>
     <script src="../transformation2.js"></script>
+    <script src="../transformers.shiftAndRotate.js"></script>
     <script src="../stage.js"></script>
     <script src="../ui.js"></script>
     <script src="test.js"></script>
