--- a/tests/testDiagramApp.html
+++ b/tests/testDiagramApp.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../../swallow.gif">
     <link rel="stylesheet" href="test.css">
 
-    <!-- modules -->
     <script src="../perspective.js"></script>
     <script src="../canvas.js"></script>
     <script src="../colours.js"></script>
@@ -17,11 +16,12 @@
     <script src="../hexahedron.js"></script>
     <script src="../fakeSpheres.js"></script>
     <script src="../transformation.js"></script>
+    <script src="../transformers.autoRotate.js"></script>
+    <script src="../transformers.shiftAndRotate.js"></script>
     <script src="../stage.js"></script>
     <script src="../ui.js"></script>
 
     <script src="test.js"></script>
-    <!-- app -->
     <script src="testColours.js"></script>
     <script src="testDiagramApp.js"></script>
 
