--- a/tests/testCubeTransformations.html
+++ b/tests/testCubeTransformations.html
@@ -6,22 +6,18 @@
     <title>Test For Cube Transformations</title>
     <link rel="icon" href="../../swallow.gif">
 
-    <!-- modules -->
     <script src="../points.js"></script>
-    <!-- <script src="../canvas.js"></script> -->
     <script src="../perspective.js"></script>
     <script src="../diagrams.js"></script>
     <script src="../colours.js"></script>
     <script src="../draw.js"></script>
-    <!-- <script src="../drawing.js"></script> -->
     <script src="../primitives.js"></script>
     <script src="../hexahedron.js"></script>
-    <!-- <script src="../shapes.js"></script>
-    <script src="../solids.js"></script> -->
     <script src="../transformation.js"></script>
     <script src="../stage.js"></script>
     <script src="../cubeGeometry.js"></script>
     <script src="../cubeTransformations.js"></script>
+    <script src="../transformers.autoRotate.js"></script>
 
     <!-- app -->
     <script src="testCubeTransformationsApp.js"></script>
