--- a/tests/testKeyboardDrivenTransformations.html
+++ b/tests/testKeyboardDrivenTransformations.html
@@ -7,8 +7,6 @@
     <link rel="icon" href="../../swallow.gif">
     <link rel="stylesheet" href="test.css">
 
-
-    <!-- modules -->
     <script src="../points.js"></script>
     <script src="../canvas.js"></script>
     <script src="../perspective.js"></script>
@@ -18,11 +16,11 @@
     <script src="../hexahedron.js"></script>
     <script src="../transformation.js"></script>
     <script src="../transformation2.js"></script>
+    <script src="../transformers.shiftAndRotate.js"></script>
     <script src="../stage.js"></script>
     <script src="../ui.js"></script>
 
     <script src="test.js"></script>
-    <!-- app -->
     <script src="testKeyboardDrivenTransformationsApp.js"></script>
 </head>
 
@@ -32,7 +30,6 @@
 
     <script>
         window.onload = function() {
-
             window.DIAGRAM_APP.run();
         };
     </script>
