--- a/tests/testStage.html
+++ b/tests/testStage.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="../../swallow.gif">
     <link rel="stylesheet" href="test.css">
 
-    <!-- modules -->
     <script src="../perspective.js"></script>
     <script src="../points.js"></script>
     <script src="../colours.js"></script>
@@ -15,15 +14,14 @@
     <script src="../primitives.js"></script>
     <script src="../hexahedron.js"></script>
     <script src="../transformation.js"></script>
+    <script src="../transformers.autoRotate.js"></script>
     <script src="../stage.js"></script>
 
-    <!-- app -->
     <script src="testStage.js"></script>
 </head>
 
 <body>
     <canvas id="canvas"></canvas>
-
     <script>
         window.onload = function() {
             window.DIAGRAM_APP.run();
